--- a/css/index.css
+++ b/css/index.css
@@ -351,5 +351,418 @@ footer{
 }
 
 
+/* for tablets max 768px*/
+@media (max-width:768px){
+        /* -------------------------------------------------HEADER CONTENT START-------------------------------------------*/
+
+    .header-container{
+        background-color: rgb(123, 119, 119);
+        width: 100vw;
+        height: 4rem;
+        margin-bottom: 6rem;
+    }
+    a{
+        text-decoration: none;
+        color: black;
+    }
+    #menu-icon{
+        height: 40px;
+        width: 35px;
+        position: absolute;
+        margin-top: 2.1rem;
+        margin-left: 1rem;
+
+    }
+    #search-input{
+        margin-left: 4rem;
+        margin-top: 1.7rem;
+        background-color:rgba(217, 217, 217, 1);
+        padding-inline-start: 12px;
+        font-style: italic;
+        color: black;
+        width: 5rem;
+        border-top: hidden;
+        border-left: hidden;
+        border-right: hidden;
+
+    }
+    #web-name{
+        margin-right: 8rem;
+        margin-top: -2rem;
+        font-size: 1.5rem;
+        font-weight: bold;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    #slogan-text{
+        margin-left: 16rem;
+        padding-bottom: 1.5rem;
+        font-size: 1.1rem;
+        font-style: italic;
+        position: absolute;
+    }
+
+    #email-icon{
+    float: right;
+    margin-right: 15rem;
+    margin-top: -.6rem;
+
+    }
+    #account-icon{
+        float: right;
+        margin-top: -.6rem;
+        margin-right: 11rem;
+    }
+
+    /* -------------------------------------------------HEADER CONTENT END-------------------------------------------*/
+
+
+    body{
+        scroll-behavior: smooth;
+        background-color: rgba(255, 255, 255, 1);
+        
+    }
+    
+    
+    /* --------------CART TOTAL START---------*/
+    
+    
+    #cart-total-icon{
+        position: absolute;
+        height: 40px;
+        width: 40px;
+        margin-left: 31rem;
+        margin-top: -4rem;
+    
+    
+    }
+    #cart-bal-text{
+        font-variant: unset;
+        position: absolute;
+        margin-top: -4.2rem;
+        margin-left: 33rem;
+        width: fit-content;
+    }
+    
+    
+    /* --------------CART TOTAL END---------*/
+    
+    
+    
+    
+    
+    /* --------------FILTER SECTION START---------*/
+    
+    
+    #filter-text{
+        
+        margin-left: 22rem;
+        margin-top: -2rem;
+        position: absolute;
+        font-weight: bold;
+    }
+    
+    .filterOptions-container{
+        height: 66px;
+        width: fit-content;
+        margin-top: 2rem;
+        margin-left: 1.2rem;
+        background: rgba(217, 217, 217, 1);
+        display: flex;
+        align-items: start;
+        justify-content: space-between;
+        
+    }
+    select{
+        margin-top: 1.7rem;
+        width: 9rem;
+    }
+    #color-text{
+        position: absolute;
+        margin-left: 4.7rem;
+        font-size: 1.2rem;
+        font-weight: bold;
+        
+    }
+    #size-text{
+        position: absolute;
+        margin-left:17rem;
+        font-size: 1.2rem;
+        font-weight: bold;
+        
+    }
+    
+    #price-text{
+        position: absolute;
+        margin-left:28.6rem;
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+    
+    /* --------------FILTER SECTION END---------*/
+
+    
+    /* --------------HOODIES SECTION START---------*/
+
+    .hoodies-container{
+        width: fit-content;
+        height: 17rem;
+        box-shadow: 0px 4px 4px 12px rgba(0, 0, 0, 0.4);
+        margin-left: 2rem;
+        margin-top: 3rem;
+        display: flex;
+        justify-content: space-between;
+        align-content: flex-start;
+
+    }
+    #hoodies-text{
+        position: absolute;
+        margin-left: 17rem;
+        font-weight: bold;
+        padding-top:0.4rem;
+    }
+    .hoodies{
+        height: 12rem;
+        width: 12rem;
+        margin-top: 2rem;
+    }
+    #hoodie2{
+        margin-left: -1rem;
+    }
+    #hoodie3{
+        margin-top: .9rem;
+    }
+
+    #h1-price{
+        position: absolute;
+        margin-top: 13.4rem;
+        margin-left: 4.4rem;
+        font-weight: 900;
+    }
+    #h2-price{
+        position: absolute;
+        margin-top: 13.4rem;
+        margin-left: 15.6rem;
+        font-weight: 900;
+    }
+    #h3-price{
+        position: absolute;
+        margin-top: 13.4rem;
+        margin-left: 27.6rem;
+        font-weight: 900;
+    }
+
+    #h1-cart-icon{
+        position: absolute;
+        margin-top: 15rem;
+        margin-left: 4.5rem;
+    }
+    #fav1-icon{
+        position: absolute;
+        margin-top: 15rem;
+        margin-left: 6.5rem;
+    }
+
+    #h2-cart-icon{
+        position: absolute;
+        margin-top: 15rem;
+        margin-left: 15.8rem;
+
+    }
+    #fav2-icon{
+        position: absolute;
+        margin-top: 15rem;
+        margin-left: 17.5rem;
+
+    }
+
+    #h3-cart-icon{
+        position: absolute;
+        margin-top: 15rem;
+        margin-left: 27.8rem;
+
+    }
+    #fav3-icon{
+        position: absolute;
+        margin-top: 15rem;
+        margin-left: 29.5rem;
+
+
+    }
+
+    /* --------------HOODIES SECTION END---------*/
+        
+    /* --------------SHIRT SECTION START---------*/
+
+    .shirts-container{
+        width: fit-content;
+        height: 17rem;
+        box-shadow: 0px 4px 4px 12px rgba(0, 0, 0, 0.4);
+        margin-left: 2rem;
+        margin-top: 3rem;
+        display: flex;
+        justify-content: space-between;
+        align-content: flex-start;
+    }
+
+
+    #shirts-text{
+        position: absolute;
+        margin-left: 17rem;
+        font-weight: bolder;
+        margin-top: 7px;
+        width: fit-content;
+    }
+
+    .shirts{
+        height: 12rem;
+        width: 12rem;
+    }
+
+    #shirt1{
+        margin-left: 2rem;
+        margin-top: 2rem;
+    }
+    #shirt2{
+        margin-left: -2rem;
+        margin-top: 2rem;
+    }
+
+    #shirt3{
+        margin-left: -2rem;
+        margin-top: 2rem;
+        height: 12rem;
+        width: 12rem;
+    }
+
+    #s1-price{
+        position: absolute;
+        margin-left: 6rem;
+        margin-top: 14rem;
+
+    }
+
+    #s2-price{
+        position: absolute;
+        margin-left: 16rem;
+        margin-top: 14rem;
+
+    }
+
+    #s3-price{
+        position: absolute;
+        margin-left: 26rem;
+        margin-top: 14rem;
+
+    }
+
+
+    #s1-cart-icon{
+        position: absolute;
+        margin-top: 15.5rem;
+        margin-left: 6rem;
+    }
+    #s1-fav1-icon{
+        position: absolute;
+        margin-top: 15.5rem;
+        margin-left: 8rem;
+    }
+    #s2-cart-icon{
+        position: absolute;
+        margin-top: 15.5rem;
+        margin-left: 16rem;
+
+    }
+    #s2-fav1-icon{
+        position: absolute;
+        margin-top: 15.5rem;
+        margin-left: 18rem;
+    }
+    #s3-cart-icon{
+        position: absolute;
+        margin-top: 15.5rem;
+        margin-left: 26rem;
+    }
+    #s3-fav1-icon{
+        position: absolute;
+        margin-top: 15.5rem;
+        margin-left: 28rem;
+    }
+    /* --------------SHIRT SECTION END---------*/
+
+    footer{
+        margin-right: 8rem;
+        margin-top: 1rem;
+    }
+
+
+    }
+
+
+/* for mobiles max 425px*/
+@media (max-width:425px){
+    /* -------------------------------------------------HEADER CONTENT START-------------------------------------------*/
+
+.header-container{
+    background-color: rgb(152, 125, 125);
+    width: 100vw;
+    height: 4rem;
+    margin-bottom: 6rem;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+#menu-icon{
+    height: 40px;
+    width: 35px;
+    position: absolute;
+    margin-top: 2.1rem;
+    margin-left: 1rem;
+
+}
+#search-input{
+    margin-left: 4rem;
+    margin-top: 1.7rem;
+    background-color:rgba(217, 217, 217, 1);
+    padding-inline-start: 12px;
+    font-style: italic;
+    color: black;
+    width: 5rem;
+    border-top: hidden;
+    border-left: hidden;
+    border-right: hidden;
+
+}
+#web-name{
+    margin-right: 8rem;
+    margin-top: -2rem;
+    font-size: 10px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#slogan-text{
+    margin-left: 16rem;
+    padding-bottom: 1.5rem;
+    font-size: 1.1rem;
+    font-style: italic;
+    position: absolute;
+}
+
+#email-icon{
+float: right;
+margin-right: 15rem;
+margin-top: -.6rem;
+
+}
+#account-icon{
+    float: right;
+    margin-top: -.6rem;
+    margin-right: 11rem;
+}
+
+/* -------------------------------------------------HEADER CONTENT END-------------------------------------------*/
+
+}
+
 
 
